--- a/homeworks/HW06/HW06.ipynb
+++ b/homeworks/HW06/HW06.ipynb
@@ -1025,9 +1025,55 @@
    "execution_count": 17,
    "id": "f218751f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved artifacts\\metrics_test.json\n"
+     ]
+    }
+   ],
    "source": [
-    "metrics_df.to_json(\"artifacts/metrics_test.json\", indent=2)\n"
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "ART_DIR = Path(\"artifacts\")\n",
+    "ART_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "metrics_test = {\n",
+    "    \"Dummy\": {\n",
+    "        \"accuracy\": float(dummy_metrics[\"accuracy\"]),\n",
+    "        \"f1\": float(dummy_metrics[\"f1\"]),\n",
+    "        \"roc_auc\": float(dummy_metrics[\"roc_auc\"]),\n",
+    "    },\n",
+    "    \"LogisticRegression\": {\n",
+    "        \"accuracy\": float(logreg_metrics[\"accuracy\"]),\n",
+    "        \"f1\": float(logreg_metrics[\"f1\"]),\n",
+    "        \"roc_auc\": float(logreg_metrics[\"roc_auc\"]),\n",
+    "    },\n",
+    "    \"DecisionTree\": {\n",
+    "        \"accuracy\": float(dt_metrics[\"accuracy\"]),\n",
+    "        \"f1\": float(dt_metrics[\"f1\"]),\n",
+    "        \"roc_auc\": float(dt_metrics[\"roc_auc\"]),\n",
+    "    },\n",
+    "    \"RandomForest\": {\n",
+    "        \"accuracy\": float(rf_metrics[\"accuracy\"]),\n",
+    "        \"f1\": float(rf_metrics[\"f1\"]),\n",
+    "        \"roc_auc\": float(rf_metrics[\"roc_auc\"]),\n",
+    "    },\n",
+    "    \"Boosting\": {\n",
+    "        \"accuracy\": float(gb_metrics[\"accuracy\"]),\n",
+    "        \"f1\": float(gb_metrics[\"f1\"]),\n",
+    "        \"roc_auc\": float(gb_metrics[\"roc_auc\"]),\n",
+    "        \"impl\": \"GradientBoostingClassifier\",\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "with (ART_DIR / \"metrics_test.json\").open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(metrics_test, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(\"Saved\", ART_DIR / \"metrics_test.json\")\n"
    ]
   },
   {
@@ -1052,7 +1098,8 @@
        "{'DecisionTree': {'best_params': {'max_depth': 10, 'min_samples_leaf': 10},\n",
        "  'best_cv_score': 0.8289624724042927,\n",
        "  'scoring': 'roc_auc',\n",
-       "  'cv': 5},\n",
+       "  'cv': 5,\n",
+       "  'complexity_controls': ['max_depth', 'min_samples_leaf']},\n",
        " 'RandomForest': {'best_params': {'max_depth': None,\n",
        "   'min_samples_leaf': 1,\n",
        "   'n_estimators': 100},\n",
@@ -1073,6 +1120,7 @@
     "        \"best_cv_score\": float(dt_search.best_score_),\n",
     "        \"scoring\": \"roc_auc\",\n",
     "        \"cv\": int(dt_search.cv),\n",
+    "        \"complexity_controls\": [\"max_depth\", \"min_samples_leaf\"],\n",
     "    },\n",
     "    \"RandomForest\": {\n",
     "        \"best_params\": rf_search.best_params_,\n",
@@ -1119,7 +1167,9 @@
     {
      "data": {
       "text/plain": [
-       "{'best_model_name': 'RandomForest',\n",
+       "{'best_model': 'RandomForest',\n",
+       " 'best_model_name': 'RandomForest',\n",
+       " 'selection_metric': 'roc_auc',\n",
        " 'test_metrics': {'accuracy': 0.8905555555555555,\n",
        "  'f1': 0.7555831265508685,\n",
        "  'roc_auc': 0.9261519146264909},\n",
@@ -1135,7 +1185,9 @@
    ],
    "source": [
     "best_model_meta = {\n",
+    "    \"best_model\": \"RandomForest\",\n",
     "    \"best_model_name\": \"RandomForest\",\n",
+    "    \"selection_metric\": \"roc_auc\",\n",
     "    \"test_metrics\": {\n",
     "        \"accuracy\": float(metrics_df.loc[\"RandomForest\", \"accuracy\"]),\n",
     "        \"f1\": float(metrics_df.loc[\"RandomForest\", \"f1\"]),\n",
@@ -1143,6 +1195,8 @@
     "    },\n",
     "    \"best_params\": rf_search.best_params_ if \"rf_search\" in globals() else {},\n",
     "}\n",
+    "\n",
+    "\n",
     "\n",
     "with open(\"artifacts/best_model_meta.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(best_model_meta, f, indent=2, ensure_ascii=False)\n",
